<resources>
    <string name="app_name">ClientSDK</string>
    <string name="user_textview">Usuario</string>
    <string name="pass_textview">Contraseña</string>
    <string name="login_btn_text">Iniciar Sesion</string>
    <string name="settings_btn_text">Ajustes</string>
    <string name="library_label_text">Librerias</string>
    <string name="clientsdkversion_lbl">Client SDK:</string>
    <string name="deskphone_lbl">DeskPhoneServices:</string>
    <string name="csdkversion_placeholder"/>
    <string name="deskphoneversion_placeholder"/>
    <string name="app_version_lbl">Versión App:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_hp">Hp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="save_settings_btn">Guardar Ajustes</string>

    <string name="cleaR_settings_btn">Limpiar Ajustes</string>
    <string name="sip_controller_hint">Controlador SIP:</string>
    <string name="sip_domain_label">Dominio SIP:</string>
    <string name="port_lbl">Puerto:</string>


    <string name="hello">Hello World, DialpadActivity!</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="asterisk">*</string>
    <string name="zero">0</string>
    <string name="hash">#</string>
    <string name="dial">Dial</string>
    <string name="backspace">&lt;=</string>
    <string name="estado_llamada">Estado de la Llamada:</string>
    <string name="tiempo_llamada">Tiempo de la llamada</string>
    <string name="asunto_lbl">Asunto</string>
    <string name="colgar_btn">Colgar</string>
    <string name="translate_lbl">Traducción:</string>
    <string name="activar_traduccion">Activar Traduccion</string>

    <string name="title_activity_call">CallActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
